force-app/main/default/objects/Lead/fields/Last_Contact_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Attempt__c</fullName>
    <label>Last Contact Attempt</label>
    <type>Date</type>
</CustomField>