force-app/main/default/objects/Lead/fields/Reason_for_Disqualification__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Disqualification__c</fullName>
    <label>Reason for Disqualification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>If Time Would Pursue</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
            </value>
            <value>
                <fullName>No Time</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Plan Further Action &amp; Revisit</fullName>
            </value>
            <value>
                <fullName>Referred Out</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>